--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "tailwindcss": "^4.0.7",
+        "toastr": "^2.1.4",
         "vite": "^6.0"
     },
     "optionalDependencies": {
