--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "php-flasher/flasher-toastr-laravel": "^2.1",
         "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
